Fixed Overflow on Section items-removed Width:100%

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -45,11 +45,12 @@ header {
 
 section {
     min-height: 100vh;
-    width: 100%;
     position: absolute;
     left: 0;
     top: 0;
     padding: 3rem 18rem;
+    overflow: hidden;
+
 }
 
 .section {
@@ -174,7 +175,7 @@ section {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding-right: 18rem;
+        padding-right: 15rem;
         .name{
             font-size: 3rem;
             span{
@@ -194,6 +195,7 @@ section {
     grid-template-columns: repeat(2, 1fr);
     padding-top: 3.5rem;
     padding-bottom: 5rem;
+    height: 100%;
     .left-about{
         padding-right: 5rem;
         p{
@@ -392,32 +394,32 @@ section {
     .btn-text{
         padding: 0 2rem;
     }
-    .btn-icon{
-        background-color: var(--color-secondary);
+    .btn-icon {
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: var(--color-secondary);
         border-radius: 50%;
         padding: 1rem;
-    }
-    &::before{
-        content: '';
+      }
+      &::before {
+        content: "";
         position: absolute;
         top: 0;
+        bottom: 0;
+        left: 0;
         right: 0;
-        transform: translateX(100%);
-        transition: all 0.4s ease-out;
+        background-color: var(--color-secondary);
         z-index: -1;
+        transition: transform 0.3s ease-in-out;
+        transform: scaleX(0);
+        transform-origin: right;
+      }
+      &:hover::before,
+      &:focus::before {
+        transform: scaleX(1);
+      }
     }
-    &:hover{
-        &::before{
-            width: 100%;
-            height: 100%;
-            background-color: var(--color-secondary);
-            transform: translateX(0);
-        }
-    }
-}
 
 .main-title{
     text-align: center;
